[gd_scene load_steps=5 format=3 uid="uid://dtrip4t4u87tp"]

[ext_resource type="Script" uid="uid://bpkii3t7b7jfw" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="Theme" uid="uid://bq7pv436bvem6" path="res://themes/button.tres" id="1_n87rw"]

[sub_resource type="InputEventAction" id="InputEventAction_myx47"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_kukqi"]
events = [SubResource("InputEventAction_myx47")]

[node name="pause_menu" type="CanvasLayer" node_paths=PackedStringArray("resume_btn")]
process_mode = 3
script = ExtResource("1_myx47")
resume_btn = NodePath("menu_container/resume_btn")

[node name="overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.282353)

[node name="menu_container" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume_btn" type="Button" parent="menu_container"]
layout_mode = 2
theme = ExtResource("1_n87rw")
shortcut = SubResource("Shortcut_kukqi")
text = "RESUME"

[node name="select_level_btn" type="Button" parent="menu_container"]
layout_mode = 2
theme = ExtResource("1_n87rw")
text = "SELECT LEVEL"

[node name="quit_btn" type="Button" parent="menu_container"]
layout_mode = 2
theme = ExtResource("1_n87rw")
text = "QUIT GAME"

[connection signal="pressed" from="menu_container/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="menu_container/select_level_btn" to="." method="_on_select_level_btn_pressed"]
[connection signal="pressed" from="menu_container/quit_btn" to="." method="_on_quit_btn_pressed"]
